Fixes #8
Added GitHUb icon on the sidebar and on the bottom. Also fixed
overlapping of copyright text and other items in the sidebar

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -711,6 +711,16 @@ nav .container {
   color: rgba(255, 255, 255, 0.5);
   font-size: 12px;
 }
+.copy-text-box {
+  position: relative;
+  height: 300px;
+  width: 100%;
+  color: rgba(255, 255, 255, 0.5);
+}
+.copy-text-bottom {
+  position: absolute;
+  bottom: 5px;
+}
 .text-panel {
   background: #474747;
   padding: 18px;
@@ -2278,6 +2288,7 @@ footer.short .top-border {
   bottom: 10px;
   left: 8px;
   font-size: 16px;
+  top: 2px;
 }
 footer.classic .social-profiles {
   margin-top: 36px;
